# recall_me

./: .gitignore  README.md  docker-compose.yml  pg_backup.sh  pyproject.toml  run_recall_me.sh
alembic/: env.py
alembic/versions/: 9a9274096f2b_user_state_table.py  fac317ea3bb9_initial_revision.py
cron/: __main__.py  bakery.py  config.py
cron/database/: __init__.py  bot_users.py  interfaces.py  user_range_events.py
cron/notifier/: interfaces.py  notifier.py  types.py
recall_me/: __main__.py  bakery.py  config.py  logging.py
recall_me/bot/: __init__.py  callback_query.py  confirmation.py  handler.py  interfaces.py  text_handler.py  types.py  utils.py  voice_handler.py
recall_me/bot/events_cmd/: __init__.py  events.py  funcs.py  interfaces.py  query_callback.py  types.py
recall_me/bot/events_fsm/: __init__.py  fsm.py  interfaces.py  types.py
recall_me/bot/user_messages/: __init__.py  (+5 more)
recall_me/calendar/: __init__.py  calendar.py  interfaces.py  smart_title.py  types.py
recall_me/database/: __init__.py  database.py  delete_event.py  event_info.py  event_save.py  events.py  interfaces.py  tables.py  types.py  user_events.py
recall_me/date_parser/: __init__.py  complex_date_parser.py  digit_date_parser.py  event_formatter.py  exceptions.py  hours_grid.py  interfaces.py  parser.py  text_date_parser.py  text_day_and_month_date_parser.py  types.py  utils.py
recall_me/utils/: __init__.py  check_ffmpeg.py  ogg_2_wav.py  text_recognizer.py
recall_me_tester/calendar/: __main__.py
recall_me_tester/voice/: __main__.py
scripts/: notify.sh  pg_backup.py  pg_backup.sh  run_pg_backup.sh
systemd_units/: recallme-database.service  recallme-notify.service  recallme-notify.timer  recallme-pgdump.service  recallme-pgdump.timer  recallme.service
tests/calendar/: test_smart_title.py
tests/date_parser/: conftest.py  constants.py  test_day_month_text_parsed.py  test_digit_date_parsed.py  test_event_formatter.py  test_month_text_parsed.py  test_text_day_and_month_parsed.py  test_text_months_parsed.py
(+22 files in other folders)
