[tool.poetry]
name = "recall_me"
version = "0.1.0"
description = ""
authors = ["mityuha <mit.makaroff@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
rutimeparser = "^1.1.1"
dateparser = "^1.1.8"
pymystem3 = "^0.2.0"
pytest = "^7.4.0"
Faker = "^19.3.0"
nltk = "^3.8.1"
vosk = "0.3.44"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
mypy = "^1.5.0"
isort = "^5.12.0"
ruff = "^0.0.284"
autoflake = "^2.2.0"
PyAudio = "^0.2.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
